// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot: Bordered 1`] = `
<button
  data-icon="left"
  data-swarm-button="bordered"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;

exports[`Button Snapshot: Default 1`] = `
<button
  data-icon="left"
  data-swarm-button="default"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;

exports[`Button Snapshot: Disabled 1`] = `
<button
  data-icon="left"
  data-swarm-button="disabled"
  data-swarm-size="default"
  data-swarm-width="default"
  disabled={true}
  type="button"
>
  Can't press me
</button>
`;

exports[`Button Snapshot: Grow 1`] = `
<button
  data-icon="left"
  data-swarm-button="default"
  data-swarm-size="default"
  data-swarm-width="grow"
  type="button"
>
  Full Width Button
</button>
`;

exports[`Button Snapshot: Icon (right) with text 1`] = `
<button
  data-icon="right"
  data-swarm-button="default"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  <span>
    Press me
    <Icon
      shape="chevron-right"
    />
  </span>
</button>
`;

exports[`Button Snapshot: Icon with text 1`] = `
<button
  data-icon="left"
  data-swarm-button="default"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  <span>
    <Icon
      shape="bolt"
    />
    Press me
  </span>
</button>
`;

exports[`Button Snapshot: Icon without text 1`] = `
<button
  data-icon="only"
  data-swarm-button="default"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  <span>
    <Icon
      shape="bolt"
    />
  </span>
</button>
`;

exports[`Button Snapshot: Inverted 1`] = `
<button
  data-icon="left"
  data-swarm-button="inverted"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;

exports[`Button Snapshot: Neutral 1`] = `
<button
  data-icon="left"
  data-swarm-button="neutral"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;

exports[`Button Snapshot: Primary 1`] = `
<button
  data-icon="left"
  data-swarm-button="primary"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Must press me
</button>
`;

exports[`Button Snapshot: Reset 1`] = `
<button
  data-icon="left"
  data-swarm-button="reset"
  data-swarm-size="default"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;

exports[`Button Snapshot: Small 1`] = `
<button
  data-icon="left"
  data-swarm-button="default"
  data-swarm-size="small"
  data-swarm-width="default"
  type="button"
>
  Press me
</button>
`;
